--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get_it: ^7.7.0
   injectable: ^2.4.2
   json_annotation: ^4.9.0
+  logger: ^2.3.0
 
 dev_dependencies:
   flutter_test:
